fix(v1.6.3): Windows arrow navigation + calendar L→N keybind
- Remove FORCE_FALLBACK on Windows: JLine's native WinSysTerminal
  (FfmWinSysTerminal / JniWinSysTerminal) already translates Win32
  KEY_EVENT_RECORDs to VT sequences in userspace, so the previous
  disable-raw-mode guard broke arrow navigation on Windows Terminal
  and CMD alike (lists, Edit a Room, Occupancy Calendar).
- Add vim bindings (h/l/k/j day+room, H/L week) to the raw-mode reader.
- Move Occupancy Calendar's "remove maintenance" from L to N so vim
  lowercase l no longer collides with the clear-maintenance action.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>